# boost_python_vigra_example

./: .gitignore  CMakeLists.txt
include/foo/: foo.hxx
src/: CMakeLists.txt  foo_python.cxx
